# tmux-info

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: hostname.rs  ip.rs  main.rs  user.rs
